Modify cognito redirect url

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en" ng-app="FileServiceApp">
 
 <head>
-<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+<link
+	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+	rel="stylesheet" />
 
 <link href="css/styles.css" rel="stylesheet">
 <link href="css/gradients.css" rel="stylesheet">
@@ -23,7 +25,6 @@
 <!-- import all controllers  -->
 <script src="views/controllers/user-home.controller.client.js"></script>
 <script src="views/controllers/user-login.controller.client.js"></script>
-<script src="views/controllers/user-somepage.controller.client.js"></script>
 
 <!-- import all client services  -->
 <script src="services/file.service.client.js"></script>
